rust/documents/src/snapshots/md_articles@code-relations.md-compile.snap
---
source: rust/documents/src/tests.rs
assertion_line: 81
expression: "&graph"
---
{
  "nodes": [
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-1",
      "kind": "CodeChunk",
      "language": "Calc",
      "dependencies": 0,
      "dependents": 9,
      "depth": 0,
      "execute_auto": "Always",
      "compile_digest": "9316405199738436605.427226447947932231.0.0.0",
      "index": 0
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "a",
      "kind": "Number",
      "dependencies": 1,
      "dependents": 8,
      "depth": 1,
      "compile_digest": "0.0.10787333969192202575.1.0",
      "index": 1
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-2",
      "kind": "CodeChunk",
      "language": "Calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "16686659887221966787.10447405199150839907.7791729115334767390.1.0",
      "index": 2
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-1",
      "kind": "CodeExpression",
      "language": "Calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "1195711327746707359.17276421816759163992.7791729115334767390.1.0",
      "index": 3
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-2",
      "kind": "CodeExpression",
      "language": "Calc",
      "dependencies": 2,
      "depth": 2,
      "compile_digest": "5376003846207966692.15846618375799990938.7791729115334767390.1.0",
      "index": 4
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-3",
      "kind": "CodeChunk",
      "language": "Calc",
      "dependencies": 2,
      "dependents": 4,
      "depth": 2,
      "execute_auto": "Never",
      "compile_digest": "16211924891031318050.15562958038392290983.7791729115334767390.1.0",
      "index": 5
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "b",
      "kind": "Number",
      "dependencies": 3,
      "dependents": 3,
      "depth": 3,
      "compile_digest": "0.0.6349562748128994219.1.0",
      "index": 6
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-3",
      "kind": "CodeExpression",
      "language": "Calc",
      "dependencies": 4,
      "depth": 4,
      "compile_digest": "14319809613103427217.1710217970989683588.9849296973909467689.1.0",
      "index": 7
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "ce-4",
      "kind": "CodeExpression",
      "language": "Calc",
      "dependencies": 4,
      "depth": 4,
      "compile_digest": "2993544518503473449.212035399485833950.9849296973909467689.1.0",
      "index": 8
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "pa-1",
      "kind": "Parameter",
      "language": "Calc",
      "dependencies": 0,
      "dependents": 2,
      "depth": 0,
      "execute_pure": false,
      "compile_digest": "2929670310044459792.6473431330112736658.0.0.0",
      "index": 9
    },
    {
      "type": "Symbol",
      "path": "",
      "name": "c",
      "kind": "Number",
      "dependencies": 1,
      "dependents": 1,
      "depth": 1,
      "compile_digest": "0.0.16269303063320466662.1.0",
      "index": 10
    },
    {
      "type": "Code",
      "path": "articles/code-relations.md",
      "id": "cc-4",
      "kind": "CodeChunk",
      "language": "Calc",
      "dependencies": 6,
      "depth": 4,
      "compile_digest": "3894522473690053649.77074787185374047.16743740572555155447.3.0",
      "index": 11
    }
  ],
  "edges": [
    {
      "from": 0,
      "to": 1,
      "relation": {
        "type": "Assigns",
        "range": [
          1,
          0,
          1,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 2,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 3,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 4,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 5,
      "to": 6,
      "relation": {
        "type": "Assigns",
        "range": [
          1,
          0,
          1,
          1
        ]
      }
    },
    {
      "from": 1,
      "to": 5,
      "relation": {
        "type": "Uses",
        "range": [
          1,
          4,
          1,
          5
        ]
      }
    },
    {
      "from": 6,
      "to": 7,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 6,
      "to": 8,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 9,
      "to": 10,
      "relation": {
        "type": "Assigns",
        "range": [
          0,
          0,
          0,
          0
        ]
      }
    },
    {
      "from": 1,
      "to": 11,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          0,
          0,
          1
        ]
      }
    },
    {
      "from": 6,
      "to": 11,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          4,
          0,
          5
        ]
      }
    },
    {
      "from": 10,
      "to": 11,
      "relation": {
        "type": "Uses",
        "range": [
          0,
          8,
          0,
          9
        ]
      }
    }
  ]
}
